# battle-game

./: CMakeLists.txt  main.cpp
sources/: main.cpp
sources/Rendering/: shader_program.cpp  shader_program.h  texture2D.cpp  texture2D.h
sources/Resources/: resources_manager.cpp  resources_manager.h
